# uart_assistant

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  run_all_tests.bat  run_tests.bat  simple_test.bat  vcpkg.json
.github/workflows/: release.yml
docs/developer-guide/: building.md  release-management.md
docs/user-guide/: controls.md  data-table.md  faq.md  index.md  installation.md  plotting.md  quickstart.md
installer/nsis/: ComAssistant.nsi
resources/: app.qrc
resources/help/: advanced.html  examples.html  help.qrc  modes.html  plotting.html  protocols.html  quickstart.html
resources/themes/: dark.qss  light.qss
resources/translations/: en_US.ts  zh_CN.ts
scripts/: build_portable.bat  build_release.bat
src/: main.cpp  version.h
src/core/communication/: CommunicationFactory.cpp  CommunicationFactory.h  ICommunication.h  MultiPortManager.cpp  MultiPortManager.h  SerialPort.cpp  SerialPort.h  SerialPortMonitor.cpp  SerialPortMonitor.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  UdpSocket.cpp  UdpSocket.h
src/core/config/: AppConfig.h  ConfigManager.cpp  ConfigManager.h  DisplaySettingsPolicy.cpp  DisplaySettingsPolicy.h
src/core/export/: DataExporter.cpp  DataExporter.h
src/core/macro/: MacroRecorder.cpp  MacroRecorder.h
src/core/protocol/: AsciiProtocol.cpp  AsciiProtocol.h  CsvProtocol.cpp  CsvProtocol.h  CustomProtocol.cpp  CustomProtocol.h  EasyHexProtocol.cpp  EasyHexProtocol.h  FrameParser.cpp  FrameParser.h  HexProtocol.cpp  HexProtocol.h  IProtocol.h  JustFloatProtocol.cpp  JustFloatProtocol.h  ModbusProtocol.cpp  ModbusProtocol.h  PlotProtocolDetector.cpp  PlotProtocolDetector.h  ProtocolFactory.cpp  ProtocolFactory.h  StampProtocol.cpp  StampProtocol.h  TextProtocol.cpp  TextProtocol.h
src/core/script/: LuaEngine.cpp  LuaEngine.h
src/core/session/: SessionData.h  SessionManager.cpp  SessionManager.h  SessionSerializer.cpp  SessionSerializer.h
src/core/theme/: ThemeManager.cpp  ThemeManager.h
src/core/transfer/: FileTransfer.cpp  FileTransfer.h
src/core/upgrade/: AppUpdateChecker.cpp  AppUpdateChecker.h  IAPUpgrader.cpp  IAPUpgrader.h
src/core/utils/: AutoSaveManager.cpp  AutoSaveManager.h  ChecksumUtils.cpp  ChecksumUtils.h  ConversionUtils.cpp  ConversionUtils.h  CrashHandler.cpp  CrashHandler.h  EncodingUtils.cpp  EncodingUtils.h  FFTUtils.cpp  FFTUtils.h  FilterUtils.cpp  FilterUtils.h  Logger.cpp  Logger.h  MemoryUtils.cpp  MemoryUtils.h
src/ui/: HelpDialog.cpp  HelpDialog.h  MainWindow.cpp  MainWindow.h  PlotRenderQuality.cpp  PlotRenderQuality.h  PlotterManager.cpp  PlotterManager.h  PlotterWindow.cpp  PlotterWindow.h  RealTimeFFTWindow.cpp  RealTimeFFTWindow.h  SpectrumWindow.cpp  SpectrumWindow.h
src/ui/controls/: ControlPanel.cpp  ControlPanel.h  IInteractiveControl.h
src/ui/controls/controls/: Attitude3DControl.cpp  Attitude3DControl.h  SliderControl.cpp  SliderControl.h
src/ui/dialogs/: DataWindowConfigDialog.cpp  DataWindowConfigDialog.h  ExportDialog.cpp  ExportDialog.h  FFTSettingsDialog.cpp  FFTSettingsDialog.h  FileTransferDialog.cpp  FileTransferDialog.h  RecoveryDialog.cpp  RecoveryDialog.h  ScriptEditorDialog.cpp  ScriptEditorDialog.h  SettingsDialog.cpp  SettingsDialog.h  ToolboxDialog.cpp  ToolboxDialog.h
src/ui/modes/: AnsiParser.cpp  AnsiParser.h  DebugModeWidget.cpp  DebugModeWidget.h  FrameModeWidget.cpp  FrameModeWidget.h  IModeWidget.h  SerialModeWidget.cpp  SerialModeWidget.h  TerminalBuffer.cpp  TerminalBuffer.h  TerminalModeWidget.cpp  TerminalModeWidget.h
src/ui/syntax/: LuaSyntaxHighlighter.cpp  LuaSyntaxHighlighter.h
src/ui/widgets/: DataStatistics.cpp  DataStatistics.h  DataTableWidget.cpp  DataTableWidget.h  DataWindow.cpp  DataWindow.h  DataWindowManager.cpp  DataWindowManager.h  MacroWidget.cpp  MacroWidget.h  ModbusAnalyzerWidget.cpp  ModbusAnalyzerWidget.h  MultiGroupSendWidget.cpp  MultiGroupSendWidget.h  MultiPortWidget.cpp  MultiPortWidget.h  NetworkSettingsWidget.cpp  NetworkSettingsWidget.h  PlotControlPanel.cpp  PlotControlPanel.h  QuickSendWidget.cpp  QuickSendWidget.h  ReceiveWidget.cpp  ReceiveWidget.h  SearchWidget.cpp  SearchWidget.h  SendWidget.cpp  SendWidget.h  SerialSettingsWidget.cpp  SerialSettingsWidget.h  SideNavigationBar.cpp  SideNavigationBar.h  TabbedReceiveWidget.cpp  TabbedReceiveWidget.h  ThemeButton.cpp  ThemeButton.h  WaterfallWidget.cpp  WaterfallWidget.h
tests/: CMakeLists.txt  main.cpp
tests/unit/: TestAnsiParser.cpp  TestAnsiParser.h  TestChecksumUtils.cpp  TestChecksumUtils.h  TestConversionUtils.cpp  TestConversionUtils.h  TestDisplaySettingsPolicy.cpp  TestDisplaySettingsPolicy.h  TestEncodingUtils.cpp  TestEncodingUtils.h  TestFFTUtils.cpp  TestFFTUtils.h  TestFilterUtils.cpp  TestFilterUtils.h  TestPlotRenderQuality.cpp  TestPlotRenderQuality.h  TestPlotterManagerLifecycle.cpp  TestPlotterManagerLifecycle.h  TestTabbedReceiveWidget.cpp  TestTabbedReceiveWidget.h  TestTerminalModeWidget.cpp  TestTerminalModeWidget.h  TestTranslationCompleteness.cpp  TestTranslationCompleteness.h
tools/: translate_ts.py
